--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -388,6 +388,7 @@ body>nav {
 	text-align: center;
 	transition: 0.3s;
 	z-index: 9;
+	background: $color-background;
 	box-shadow: 0 2px 6px 1px rgba(0,0,0,0.2);
 }
 
