--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -33,6 +33,16 @@ $shadow-level-1: 0 1px 3px 1px rgba(0,0,0,0.2);
 /* level 2 */
 $shadow-level-2: 0 2px 6px 1px rgba(0,0,0,0.2);
 
+/*---------------------------------------
+  Font sizing
+---------------------------------------*/
+$font-small: 0.8rem;
+
+/*---------------------------------------
+  Transitions
+---------------------------------------*/
+$transition-default: 0.2s;
+
 
 /*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
     Default HTML
@@ -215,6 +225,37 @@ hr {
 }
 */
 
+/*
+.small-link {
+	position: relative;
+	font-size: $font-small;
+}
+
+.small-link::after {
+	content: '';
+	opacity: 0;
+	display: block;
+	position: absolute;
+	left: -0.25rem;
+	right: -0.25rem;
+	margin-top: -0.45rem;
+	border-bottom: 0.5rem solid $color-secondary;
+	z-index: -1;
+	transition: $transition-default;
+}
+
+.small-link:hover::after {
+	content: '';
+	opacity: 1;
+	display: block;
+	position: absolute;
+	left: -0.25rem;
+	right: -0.25rem;
+	margin-top: -0.45rem;
+	border-bottom: 0.5rem solid $color-secondary;
+	z-index: -1;
+}*/
+
 details>summary {
 	outline: none;
 	cursor: pointer;
@@ -254,7 +295,7 @@ details {
 	position: absolute;
 	padding: 0.15rem 0.25rem;
 	text-align: left;
-	font-size: 0.8rem;
+	font-size: $font-small;
 	z-index: 8;
 }
 
