--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -502,13 +502,18 @@ body>nav ul li a:active {
 @media (max-width: 800px) {
 	body>nav,
 	.sidebar {
-		display: block;
-		padding-top: 6rem;
-		padding-left: 2rem;
+		display: none;
+		padding-top: 7rem;
+		padding-left: 3rem;
 		width: auto;
 		left: 0;
 		right: 0;
 		bottom: 0;
+	}
+
+	body>nav.show,
+	.sidebar.show {
+		display: block;
 	}
 
 	body>nav>ul>li {
