--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -56,6 +56,7 @@ body {
 #page,
 main {
 	padding: 3rem 2rem;
+	overflow-x: hidden;
 }
 
 main {
@@ -417,6 +418,7 @@ body>nav {
 	width: 100%;
 	text-align: center;
 	transition: 0.3s;
+	overflow: hidden;
 	z-index: 9;
 	background: $color-background;
 	box-shadow: 0 2px 6px 1px rgba(0,0,0,0.2);
@@ -483,7 +485,7 @@ body>nav ul li a:active {
 	top: 1rem;
 	left: 1rem;
 	box-shadow: $shadow-level-2;
-	z-index: 100;
+	z-index: 10;
 }
 
 #menu-button:active {
@@ -529,6 +531,11 @@ body>nav ul li a:active {
 	#menu-button {
 		display: block;
 	}
+}
+
+body>nav ul li a:active {
+	background: $color-active;
+	transition: 0.1s;
 }
 
 /*-------------------------------------*/
