--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -6,7 +6,7 @@ A collection of CSS styles.
 V 0.0.3 (early alpha)
 
 ### Deprecated
-- #page is, use main instead
+- #page, use main instead
 ---------------------------------------*/
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap');
