--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -723,6 +723,10 @@ button.dark:active:enabled {
 	visibility: hidden;
 }
 
+.betta_hidden {
+    display: none;
+}
+
 .click-plane {
     position: absolute;
     top: 0;
