Add styling to form buttons

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -730,6 +730,10 @@ form button {
   margin-top: 1.6rem;
 }
 
+form button[type=button] .material-icons-round {
+  font-size: 1rem;
+}
+
 /*-------------------------------------*/
 /*---------------------------------------
 	Main Navigation Menu
