--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -417,13 +417,31 @@ img.round {
 /*---------------------------------------
 	Forms
 ---------------------------------------*/
+form label,
 form button {
+    vertical-align: middle;
+    text-align: left;
+}
+
+form button[type="submit"] {
 	margin-top: $line-height;
+}
+
+form button.show {
+    display: inline-block;
 }
 
 // Make all buttons of type button small on forms
 form button[type="button"] .material-icons-round {
     font-size: 1rem;
+}
+
+// Hide file input fields
+form input[type="file"] {
+    display: none;
+}
+
+form label.input-file {
 }
 /*-------------------------------------*/
 
