Add option for caption as overlay

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -1115,6 +1115,15 @@ button.dark:active:enabled {
   border-radius: 0.25rem;
 }
 
+.gallery-item > .content > .click-plane.caption {
+  background: #ffffff;
+  opacity: 0.85;
+}
+
+.gallery-item > .content > .click-plane.caption > p {
+  padding: 0 1rem;
+}
+
 @media (max-width: 800px) {
   #gallery {
     padding-bottom: 0rem;
@@ -1123,14 +1132,6 @@ button.dark:active:enabled {
   .gallery-item {
     width: 100%;
     padding: 0 0 2rem 0;
-  }
-
-  .photo > img {
-    box-shadow: none;
-  }
-
-  .gallery-item > .content > .click-plane {
-    display: none;
   }
 }
 @media (max-width: 480px) {
