--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -579,22 +579,47 @@ details {
 /*---------------------------------------
   Tooltip
 ---------------------------------------*/
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
 .tooltip > span.tooltip-text {
+  visibility: hidden;
   opacity: 0;
   position: absolute;
   height: auto;
   width: auto;
+  top: 2.75rem;
+  left: -3rem;
+  right: -3rem;
   padding: 0.25rem 0.5rem;
-  text-align: left;
+  border-radius: 0.5rem;
+  text-align: center;
   font-size: 0.8rem;
   line-height: 1rem;
   z-index: 8;
-  transition-delay: 1s !important;
-  transition-property: opacity;
+  background-color: #212121;
+  color: #eeeeee;
+  transition-delay: 0s;
 }
 
 .tooltip:hover > span.tooltip-text {
+  visibility: visible;
   opacity: 1;
+  transition: opacity 0.2s;
+  transition-delay: 1s;
+}
+
+.tooltip > span.tooltip-text::after {
+  content: " ";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #212121 transparent;
 }
 
 /*-------------------------------------*/
@@ -759,7 +784,7 @@ body > nav {
   width: 100%;
   text-align: center;
   transition: 0.3s;
-  overflow: hidden;
+  overflow: show;
   z-index: 10;
   background: #ffffff;
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
