--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -268,7 +268,7 @@ details {
 ---------------------------------------*/
 .tooltip {
     position: relative;
-   display: inline-block;
+    display: inline-block;
 }
 
 .tooltip>span.tooltip-text {
@@ -308,8 +308,29 @@ details {
     border-width: 5px;
     border-style: solid;
     border-color: transparent transparent $color-main transparent;
-  }
+}
 
+// Use tooltip as menu text in mobile menu
+@media(max-width: 800px) {
+    .tooltip>span.tooltip-text {
+        visibility: visible;
+        opacity: 1;
+        top: 0;
+        bottom: 0;
+        left: 3rem;
+        right: auto;
+        padding: 0.5rem 0.5rem;
+        text-align: left;
+        font-size: 1rem;
+        line-height: $line-height;
+        background-color: $color-background;
+        color: $color-main;
+    }
+
+    .tooltip>span.tooltip-text::after {
+        display: none;
+    }
+}
 /*-------------------------------------*/
 
 /*---------------------------------------
