--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -264,6 +264,42 @@ details {
 /*-------------------------------------*/
 
 /*---------------------------------------
+	Loader
+---------------------------------------*/
+#loader {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: $color-accent;
+    z-index: 101;
+}
+
+#loader.show {
+    display: block;
+}
+
+#spinner {
+    position: absolute;
+    top: calc(50vh - 2.5rem);
+    left: calc(50vw - 2.5rem);
+    border: 16px solid $color-secondary;
+    border-top: 16px solid $color-main; 
+    border-radius: 50%;
+    width: 5rem;
+    height: 5rem;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+/*-------------------------------------*/
+
+/*---------------------------------------
   Tooltip
 ---------------------------------------*/
 .tooltip {
