--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -577,6 +577,45 @@ details {
 
 /*-------------------------------------*/
 /*---------------------------------------
+	Loader
+---------------------------------------*/
+#loader {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #f5f5f5;
+  z-index: 101;
+}
+
+#loader.show {
+  display: block;
+}
+
+#spinner {
+  position: absolute;
+  top: calc(50vh - 2.5rem);
+  left: calc(50vw - 2.5rem);
+  border: 16px solid #e0e0e0;
+  border-top: 16px solid #212121;
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+/*-------------------------------------*/
+/*---------------------------------------
   Tooltip
 ---------------------------------------*/
 .tooltip {
