Add custom icon replacement styling

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -498,6 +498,16 @@ img.round {
 /*-------------------------------------*/
 
 /*---------------------------------------
+	Custom Icon Replacements for
+    Material Icons
+---------------------------------------*/
+.material-icons-round.custom-icon>img {
+    height: 1.5rem;
+	color: $color-main;
+}
+/*-------------------------------------*/
+
+/*---------------------------------------
 	Forms
 ---------------------------------------*/
 form label,
