--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -808,6 +808,16 @@ img.round {
 
 /*-------------------------------------*/
 /*---------------------------------------
+	Custom Icon Replacements for
+    Material Icons
+---------------------------------------*/
+.material-icons-round.custom-icon > img {
+  height: 1.5rem;
+  color: #212121;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
 	Forms
 ---------------------------------------*/
 form label,
