Add italic class

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -1121,6 +1121,10 @@ button.dark:active:enabled {
   text-align: center;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .right {
   text-align: right;
 }
