--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -1125,8 +1125,10 @@ button.dark:active:enabled {
   font-style: italic;
 }
 
-/* Used to set preferred break points, which will occur
-between lines */
+/* 
+Used to set preferred break points, which will occur
+between lines
+*/
 .line {
   display: inline-block;
 }
