--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -825,8 +825,10 @@ button.dark:active:enabled {
 	font-style: italic;
 }
 
-/* Used to set preferred break points, which will occur
-between lines */
+/* 
+Used to set preferred break points, which will occur
+between lines
+*/
 .line {
     display: inline-block;
 }
