--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -893,7 +893,8 @@ between lines
 /*---------------------------------------
 	Gallery
 ---------------------------------------*/
-#gallery {
+#gallery,
+.gallery {
 	margin: 0 auto;
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -933,7 +934,8 @@ between lines
 }
 
 @media (max-width: 800px) {
-    #gallery {
+    #gallery,
+    .gallery {
         padding-bottom: 0rem;
     }
 
@@ -944,7 +946,8 @@ between lines
 }
 
 @media (max-width: 480px) {
-    #gallery {
+    #gallery,
+    .gallery {
         padding-bottom: 0.75rem;
     }
 
