--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -140,6 +140,10 @@ p {
 	margin-bottom: 1.6rem;
 }
 
+p.small {
+    font-size: $font-small;
+}
+
 p>a {
 	border-bottom-style: solid;
 	border-bottom-width: 1px;
