--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -946,7 +946,7 @@ body > nav ul li a:active {
 #back-button {
   display: block;
   position: fixed;
-  bottom: 1rem;
+  top: 1rem;
   left: 1rem;
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
   z-index: 10;
@@ -967,6 +967,11 @@ body > nav ul li a:active {
   }
 }
 @media (max-width: 800px) {
+  #back-button {
+    top: auto;
+    bottom: 1rem;
+  }
+
   .sidebar + main {
     margin-left: auto;
   }
