Update author info

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -1,7 +1,10 @@
+@charset "UTF-8";
 /*---------------------------------------
 Betta CSS
 
 A collection of CSS styles.
+
+A project by 😎 & 🤓.
 
 V 0.0.3 (early alpha)
 
