Update caption button spacing

--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -3,7 +3,7 @@ Betta CSS
 
 A collection of CSS styles.
 
-A project by 😎 & 🤓.
+A project by Isak Combrinck & Dahman Ramdani.
 
 V 0.0.3 (early alpha)
 
@@ -1290,7 +1290,7 @@ Flip Card
 }
 
 #caption {
-	margin-top: 3.8rem;
+	margin-top: 4rem;
 }
 
 #back, #forward {
