--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -835,6 +835,11 @@ img.round {
 /*---------------------------------------
 	Forms
 ---------------------------------------*/
+form {
+  margin: 0;
+  padding: 1.6rem 0;
+}
+
 form label,
 form button {
   vertical-align: middle;
@@ -1190,16 +1195,33 @@ between lines
   padding: 0 1rem;
 }
 
+.inline-single label {
+  margin-left: -0.5rem;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+  margin-right: 1.5%;
+}
+
 .inline-split {
   box-sizing: border-box;
   display: inline-block;
   width: 50%;
-  padding: 0 1rem;
+  padding: 0 1rem 1rem 1rem;
   vertical-align: top;
 }
 
+.inline-split.left {
+  padding-right: 1rem;
+}
+
 .inline-split.right {
+  padding-left: 1rem;
   text-align: left;
+}
+
+.inline-split .material-icons-round,
+.inline-single .material-icons-round {
+  vertical-align: bottom;
 }
 
 @media (max-width: 600px) {
@@ -1207,13 +1229,17 @@ between lines
     display: block;
     width: 100%;
   }
+
+  .inline-split {
+    padding-bottom: 1rem;
+  }
 }
 /*---------------------------------------
 	Gallery
 ---------------------------------------*/
 #gallery,
 .gallery {
-  margin: 0 auto;
+  margin: 0 -0.5rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
@@ -1259,7 +1285,7 @@ between lines
 
   .gallery-item {
     width: 100%;
-    padding: 0 0 2rem 0;
+    padding: 0 0.5rem 2rem 0.5rem;
   }
 }
 @media (max-width: 480px) {
@@ -1312,10 +1338,186 @@ between lines
 /*-------------------------------------*/
 /*---------------------------------------
 	Card
+
+    Not ready to be used.
+---------------------------------------
+.card {
+	display: inline-block;
+	vertical-align: top;
+	height: 20rem;
+	width: 15rem;
+	margin: 1rem;
+}
+
+.card>.front,
+.card>.back {
+	position: relative;
+	height: 100%;
+	width: 100%;
+	border-radius: 0.25rem;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	background: rgba(255,255,255,1);
+	overflow: hidden;
+}
+
+.card>.front>img {
+	height: 100%;
+	width: auto;
+	max-width: none;
+	border-radius: 0.25rem;
+}
+
+.card>.back>.profile {
+	height: 11rem;
+	width: 100%;
+	border-top-left-radius: 1rem;
+	border-top-right-radius: 1rem;
+	border-bottom-left-radius: 0;
+	border-bottom-right-radius: 0;
+}
+
+.card>.back>.profile>img {
+	position: absolute;
+	height: 9rem;
+	width: 9rem;
+	top: 2rem;
+	left: 3rem;
+	border-radius: 50%;
+}
+
+.card>.back>.profile>.icon-left,
+.card>.back>.profile>.icon-right {
+	position: absolute;
+	height: 3rem;
+	width: 3rem;
+	top: 0.5rem;
+	border-radius: 50%;
+}
+
+.card>.back>.profile>.icon-left {
+	left: 0.5rem; 
+}
+
+.card>.back>.profile>.icon-right {
+	right: 0.5rem; 
+}
+.card>.back>.profile>.icon-left>.material-icons-round,
+.card>.back>.profile>.icon-right>.material-icons-round {
+	width: 100%;
+	font-size: 2rem;
+	line-height: 3rem;
+	color: #212121;
+	text-align: center;
+}
+
+.card>.back>.description {
+	height: 9rem;
+	width: 100%;
+	padding: 1rem;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+	border-bottom-left-radius: 1rem;
+	border-bottom-right-radius: 1rem;
+}
+
+.card>.back>.description>h5 {
+	height: 1.5rem;
+	margin: 0;
+}
+.card>.back>.description>h6 {
+	margin: 0;
+}
+.card>.back>.description>p {
+	margin: 0;
+}
+
+.card>.back>.description>.properties {
+	width: 100%;
+}
+
+.card>.back>.description>.properties>.p-1,
+.card>.back>.description>.properties>.p-2,
+.card>.back>.description>.properties>.p-3{
+	width: 100%;
+	height: 1rem;
+	margin-top: 0.5rem;
+	border-radius: 0.5rem;
+}
+
+.card>.back>.description>.properties>.p-1>div ,
+.card>.back>.description>.properties>.p-2>div ,
+.card>.back>.description>.properties>.p-3>div {
+	height: 100%;
+	border-radius: 0.5rem;
+}
+
+.card>.back>.description>.properties>.p-1>div:not(:first-child) {
+	display: inline-block;
+	width: calc(20% - 0.75rem);
+	margin: 0 0.25rem;
+	background: #eeeeee;
+}
+
+.card>.back>.description>.properties>.p-2>div:not(:first-child) {
+	display: inline-block;
+	width: calc(20% - 0.75rem);
+	margin: 0 0.25rem;
+	background: #eeeeee;
+}
+
+.card>.back>.description>.properties .icon {
+	display: inline-block;
+	height: 1rem;
+	width: 1.25rem;
+	margin: 0;
+	padding: 0;
+	vertical-align: top;
+}
+.card>.back>.description>.properties .icon>.material-icons-round {
+	font-size: 1.25rem;
+	line-height: 1.25rem;
+	height: 1rem;
+	width: 1.25rem;
+	margin: 0;
+	padding: 0;
+	vertical-align: top;
+}
+.card>.back>.description>.properties>.p-3>div:not(:first-child) {
+	display: inline-block;
+	width: calc(12.5% - 0.65625rem);
+	margin: 0 0.25rem;
+	background: #eeeeee;
+}
+
+.water {
+	background: lightseagreen !important;
+}
+
+.sun {
+	background: orange !important;
+}
+
+.temperature-m-25 {
+	background: steelblue !important;
+}.temperature-m-20 {
+	background: darkturquoise !important;
+}.temperature-m-15 {
+	background: skyblue !important;
+}.temperature-m-10 {
+	background: lightskyblue !important;
+}.temperature-m-5 {
+	background: lightblue !important;
+}.temperature-0 {
+	background: burlywood !important;
+}.temperature-5 {
+	background: yellow !important;
+}.temperature-10 {
+	background: orange !important;
+}
+-------------------------------------*/
+/*---------------------------------------
+	Flip Card
 ---------------------------------------*/
-/*-------
-Flip Card
--------*/
 .flip-card {
   background-color: transparent;
   perspective: 1000px;
@@ -1325,17 +1527,29 @@ Flip Card
 
 .flip-card > .card {
   position: relative;
-  transition: transform 0.5s;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
   transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
 }
 
-.flip-card:hover > .card {
+.flip-card:hover > .card,
+.flip-card > .card.active {
   transform: rotateY(180deg);
 }
 
-.flip-card > .card > .front, .flip-card > .card > .back {
+.flip-card > .card > .front,
+.flip-card > .card > .back {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+}
+
+.flip-card > .card > .front img {
+  width: 100%;
+  margin: 0;
+  border-radius: 0.25rem;
 }
 
 .flip-card > .card > .back {
@@ -1347,198 +1561,11 @@ Flip Card
   transform: rotateY(180deg);
 }
 
-/*-----*/
-.card {
-  display: inline-block;
-  vertical-align: top;
-  height: 20rem;
-  width: 15rem;
-  margin: 1rem;
-}
-
-.card > .front,
-.card > .back {
-  position: relative;
+.flip-card > .card > .back textarea {
   height: 100%;
-  width: 100%;
-  border-radius: 0.25rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  background: white;
-  overflow: hidden;
-}
-
-.card > .front > img {
-  height: 100%;
-  width: auto;
-  max-width: none;
-  border-radius: 0.25rem;
-}
-
-.card > .back > .profile {
-  height: 11rem;
-  width: 100%;
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-
-.card > .back > .profile > img {
-  position: absolute;
-  height: 9rem;
-  width: 9rem;
-  top: 2rem;
-  left: 3rem;
-  border-radius: 50%;
-}
-
-.card > .back > .profile > .icon-left,
-.card > .back > .profile > .icon-right {
-  position: absolute;
-  height: 3rem;
-  width: 3rem;
-  top: 0.5rem;
-  border-radius: 50%;
-}
-
-.card > .back > .profile > .icon-left {
-  left: 0.5rem;
-}
-
-.card > .back > .profile > .icon-right {
-  right: 0.5rem;
-}
-
-.card > .back > .profile > .icon-left > .material-icons-round,
-.card > .back > .profile > .icon-right > .material-icons-round {
-  width: 100%;
-  font-size: 2rem;
-  line-height: 3rem;
-  color: #212121;
-  text-align: center;
-}
-
-.card > .back > .description {
-  height: 9rem;
-  width: 100%;
-  padding: 1rem;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.card > .back > .description > h5 {
-  height: 1.5rem;
-  margin: 0;
-}
-
-.card > .back > .description > h6 {
-  margin: 0;
-}
-
-.card > .back > .description > p {
-  margin: 0;
-}
-
-.card > .back > .description > .properties {
-  width: 100%;
-}
-
-.card > .back > .description > .properties > .p-1,
-.card > .back > .description > .properties > .p-2,
-.card > .back > .description > .properties > .p-3 {
-  width: 100%;
-  height: 1rem;
-  margin-top: 0.5rem;
-  border-radius: 0.5rem;
-}
-
-.card > .back > .description > .properties > .p-1 > div,
-.card > .back > .description > .properties > .p-2 > div,
-.card > .back > .description > .properties > .p-3 > div {
-  height: 100%;
-  border-radius: 0.5rem;
-}
-
-.card > .back > .description > .properties > .p-1 > div:not(:first-child) {
-  display: inline-block;
-  width: calc(20% - 0.75rem);
-  margin: 0 0.25rem;
-  background: #eeeeee;
-}
-
-.card > .back > .description > .properties > .p-2 > div:not(:first-child) {
-  display: inline-block;
-  width: calc(20% - 0.75rem);
-  margin: 0 0.25rem;
-  background: #eeeeee;
-}
-
-.card > .back > .description > .properties .icon {
-  display: inline-block;
-  height: 1rem;
-  width: 1.25rem;
+  min-height: 0px;
   margin: 0;
   padding: 0;
-  vertical-align: top;
-}
-
-.card > .back > .description > .properties .icon > .material-icons-round {
-  font-size: 1.25rem;
-  line-height: 1.25rem;
-  height: 1rem;
-  width: 1.25rem;
-  margin: 0;
-  padding: 0;
-  vertical-align: top;
-}
-
-.card > .back > .description > .properties > .p-3 > div:not(:first-child) {
-  display: inline-block;
-  width: calc(12.5% - 0.65625rem);
-  margin: 0 0.25rem;
-  background: #eeeeee;
-}
-
-.water {
-  background: lightseagreen !important;
-}
-
-.sun {
-  background: orange !important;
-}
-
-.temperature-m-25 {
-  background: steelblue !important;
-}
-
-.temperature-m-20 {
-  background: darkturquoise !important;
-}
-
-.temperature-m-15 {
-  background: skyblue !important;
-}
-
-.temperature-m-10 {
-  background: lightskyblue !important;
-}
-
-.temperature-m-5 {
-  background: lightblue !important;
-}
-
-.temperature-0 {
-  background: burlywood !important;
-}
-
-.temperature-5 {
-  background: yellow !important;
-}
-
-.temperature-10 {
-  background: orange !important;
 }
 
 /*-------------------------------------*/
