--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -525,6 +525,11 @@ img.round {
 /*---------------------------------------
 	Forms
 ---------------------------------------*/
+form {
+    margin: 0;
+    padding: $line-height 0;
+}
+
 form label,
 form button {
     vertical-align: middle;
@@ -547,9 +552,6 @@ form button[type="button"] .material-icons-round {
 // Hide file input fields
 form input[type="file"] {
     display: none;
-}
-
-form label.input-file {
 }
 /*-------------------------------------*/
 
@@ -891,16 +893,33 @@ between lines
 	padding: 0 1rem;
 }
 
+.inline-single label {
+	margin-left: -0.5rem;
+	margin-bottom: 0.5rem;
+	display: inline-block;
+	margin-right: 1.5%;
+}
+
 .inline-split {
 	box-sizing: border-box;
 	display: inline-block;
 	width: 50%;
-	padding: 0 1rem;
+	padding: 0 1rem 1rem 1rem;
 	vertical-align: top;
 }
 
+.inline-split.left {
+	padding-right: 1rem;
+}
+
 .inline-split.right {
+	padding-left: 1rem;
 	text-align: left;
+}
+
+.inline-split .material-icons-round,
+.inline-single .material-icons-round {
+	vertical-align: bottom;
 }
 
 @media(max-width: 600px) {
@@ -908,6 +927,10 @@ between lines
 		display: block;
 		width: 100%;
 	}
+
+    .inline-split {
+        padding-bottom: 1rem;
+    }
 }
 
 /*---------------------------------------
@@ -915,7 +938,7 @@ between lines
 ---------------------------------------*/
 #gallery,
 .gallery {
-	margin: 0 auto;
+	margin: 0 -0.5rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
@@ -961,7 +984,7 @@ between lines
 
     .gallery-item {
         width: 100%;
-        padding: 0 0 2rem 0;
+        padding: 0 0.5rem 2rem 0.5rem;
     }
 }
 
@@ -1015,49 +1038,13 @@ between lines
 .feed>article>a>p {
 	margin-bottom: 0;
 }
-
 /*-------------------------------------*/
 
 /*---------------------------------------
 	Card
----------------------------------------*/
 
-/*-------
-Flip Card
--------*/
-.flip-card {
-	background-color: transparent;
-	perspective: 1000px;
-	vertical-align: top;
-	display: inline-block;
-}
-
-.flip-card>.card {
-	position: relative;
-	transition: transform 0.5s;
-	transform-style: preserve-3d;
-}
-
-.flip-card:hover>.card {
-	transform: rotateY(180deg);
-}
-
-.flip-card>.card>.front, .flip-card>.card>.back {
-	-webkit-backface-visibility: hidden;
-	backface-visibility: hidden;
-}
-
-
-.flip-card>.card>.back {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	transform: rotateY(180deg);
-}
-/*-----*/
-
+    Not ready to be used.
+---------------------------------------
 .card {
 	display: inline-block;
 	vertical-align: top;
@@ -1230,6 +1217,60 @@ Flip Card
 	background: yellow !important;
 }.temperature-10 {
 	background: orange !important;
+}
+-------------------------------------*/
+
+/*---------------------------------------
+	Flip Card
+---------------------------------------*/
+.flip-card {
+	background-color: transparent;
+	perspective: 1000px;
+	vertical-align: top;
+	display: inline-block;
+}
+
+.flip-card>.card {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	transition: transform 0.6s;
+	transform-style: preserve-3d;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	border-radius: 0.25rem;
+}
+
+.flip-card:hover>.card,
+.flip-card>.card.active {
+	transform: rotateY(180deg);
+}
+
+.flip-card>.card>.front,
+.flip-card>.card>.back {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+.flip-card>.card>.front img {
+	width: 100%;
+	margin: 0;
+	border-radius: 0.25rem;
+}
+
+.flip-card>.card>.back {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	transform: rotateY(180deg);
+}
+
+.flip-card>.card>.back textarea {
+	height: 100%;
+	min-height: 0px;
+	margin: 0;
+	padding: 0;
 }
 /*-------------------------------------*/
 
