Add notifaction css

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -20,7 +20,7 @@ E.g. sass --watch betta-0.0.3.scss betta-0.0.3.css
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -393,7 +393,7 @@ button, ul, li, a, p {
 }
 
 body, textarea, option, input, select, button {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 i {
@@ -1700,5 +1700,61 @@ p.version {
   transform: rotate(-90deg);
   transform-origin: right bottom;
 }
+
+/*-------------------------------------*/
+/*---------------------------------------
+	Notification
+---------------------------------------*/
+#notification {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 101;
+}
+
+#notification .buttons,
+#notification .content {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#notification.show {
+  display: block;
+}
+
+#notification .buttons {
+  width: 20%;
+}
+
+#notification .content {
+  width: 80%;
+}
+
+#notification .message {
+  width: 20rem;
+  align-content: right;
+  margin: 1rem;
+  padding: 1rem;
+  float: right;
+  border: solid 1px;
+  border-color: #81786a;
+  border-radius: 1rem;
+  word-wrap: break-word;
+  background-color: #FF3737;
+}
+
+#cancel-notification {
+  display: none;
+  margin-bottom: 1rem;
+}
+
+#cancel-notification.show {
+  display: block;
+}
+
+/*-------------------------------------*/
 
 /*# sourceMappingURL=betta-0.0.3.css.map */
