--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -675,6 +675,11 @@ body>nav ul li a:active {
 		margin-left: auto;
 	}
 
+    body>nav>ul {
+		position: absolute;
+        bottom: 5rem;
+	}
+
 	body>nav,
 	.sidebar {
 		display: none;
