--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -808,6 +808,10 @@ button.dark:active:enabled {
 	font-size: 1.8rem;
 }
 
+.icon-button .material-icons-round.custom-icon{
+	font-size: 1rem;
+}
+
 .icon-button.dark .material-icons-round {
 	color: #ffffff;
 }
