--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -948,6 +948,8 @@ body > nav ul li a:active {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
+  width: 4rem;
+  height: 4rem;
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
   z-index: 11;
 }
@@ -957,6 +959,8 @@ body > nav ul li a:active {
   position: fixed;
   top: 1rem;
   left: 1rem;
+  width: 4rem;
+  height: 4rem;
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.2);
   z-index: 10;
 }
