--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -934,11 +934,16 @@ between lines
     cursor: pointer;
 }
 
-.inline-single {
+.inline-single,
+.inline-split {
 	box-sizing: border-box;
 	display: inline-block;
+	padding: 0 1rem 1rem 1rem;
+	vertical-align: top;
+}
+
+.inline-single {
 	width: 100%;
-	padding: 0 1rem;
 }
 
 .inline-single label {
@@ -948,11 +953,7 @@ between lines
 }
 
 .inline-split {
-	box-sizing: border-box;
-	display: inline-block;
 	width: 50%;
-	padding: 0 1rem 1rem 1rem;
-	vertical-align: top;
 }
 
 .inline-split.left {
