--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -12,6 +12,8 @@ E.g. sass --watch betta-0.0.3.scss betta-0.0.3.css
 
 ### Deprecated
 - #page, use main instead
+- .material-icons-round, use .icon instead
+- .custom-icon, use .icon instead
 ---------------------------------------*/
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -830,16 +832,6 @@ img.round {
 
 /*-------------------------------------*/
 /*---------------------------------------
-	Custom Icon Replacements for
-    Material Icons
----------------------------------------*/
-.material-icons-round.custom-icon > img {
-  height: 1.5rem;
-  color: #212121;
-}
-
-/*-------------------------------------*/
-/*---------------------------------------
 	Forms
 ---------------------------------------*/
 form {
@@ -1072,6 +1064,30 @@ footer {
 
 /*-------------------------------------*/
 /*---------------------------------------
+	Custom Icon Replacements for
+    Material Icons
+---------------------------------------*/
+.material-icons-round.custom-icon > img {
+  /* deprecated */
+  height: 1.5rem;
+  color: #212121;
+}
+
+span.icon {
+  height: 1.5rem;
+  width: 1.5rem;
+  line-height: 0rem;
+}
+
+span.icon > img {
+  height: 1.5rem;
+  width: 1.5rem;
+  line-height: 0rem;
+  color: #212121;
+}
+
+/*-------------------------------------*/
+/*---------------------------------------
 	Buttons
 ---------------------------------------*/
 button {
@@ -1124,12 +1140,14 @@ button.dark:active:enabled {
   border-radius: 2rem;
 }
 
-.icon-button.filled .material-icons-round {
+.icon-button.filled .material-icons-round,
+.icon-button.filled .icon {
   color: #212121;
 }
 
 .icon-button.filled:disabled,
-.icon-button.filled:disabled .material-icons-round {
+.icon-button.filled:disabled .material-icons-round,
+.icon-button.filled:disabled .icon {
   color: #757575;
 }
 
@@ -1140,31 +1158,37 @@ button.dark:active:enabled {
   padding-right: 0.5rem;
 }
 
-.icon-button .material-icons-round {
+.icon-button .material-icons-round,
+.icon-button > .icon {
   vertical-align: middle;
   color: #212121;
   font-size: 1.8rem;
 }
 
-.icon-button .material-icons-round.custom-icon {
+.icon-button .material-icons-round.custom-icon,
+.icon-button > .icon {
   font-size: 1rem;
 }
 
 .icon-button.dark .material-icons-round {
+  /* deprecated */
   color: #ffffff;
 }
 
 @media (max-width: 800px) {
-  body > .icon-button {
+  .icon-button {
     padding: 0.75rem;
   }
 
-  body > .icon-button .material-icons-round {
+  body > .icon-button .material-icons-round,
+.icon-button > .icon {
     font-size: 2.5rem;
   }
 
-  .icon-button .material-icons-round.custom-icon img {
+  .icon-button .material-icons-round.custom-icon img,
+.icon-button > .icon > img {
     height: 2.5rem;
+    width: 2.5rem;
   }
 }
 .sliding-button {
@@ -1174,9 +1198,9 @@ button.dark:active:enabled {
 }
 
 .sliding-button > .content {
-  width: 0rem;
-  height: 1.4rem;
-  margin-bottom: -0.3rem;
+  height: 1.5rem;
+  width: 0;
+  margin-bottom: -0.75rem;
   overflow: hidden;
   display: inline-block;
   transition: 0.2s;
