Update link in text styling

--- a/betta-0.0.3.css
+++ b/betta-0.0.3.css
@@ -476,9 +476,34 @@ ul.plain li {
   list-style: none;
 }
 
-p > a {
+p > a,
+h1 > a,
+h2 > a,
+h3 > a,
+h4 > a,
+h5 > a,
+h6 > a {
   border-bottom-style: solid;
-  border-bottom-width: 1px;
+  border-bottom-width: 2px;
+  border-color: #e0e0e0;
+}
+
+h1 > a,
+h2 > a,
+h3 > a,
+h4 > a,
+h5 > a,
+h6 > a {
+  border-bottom-width: 4px;
+}
+
+p > a:hover,
+h1 > a:hover,
+h2 > a:hover,
+h3 > a:hover,
+h4 > a:hover,
+h5 > a:hover,
+h6 > a:hover {
   border-color: #212121;
 }
 
