--- a/betta-0.0.3.scss
+++ b/betta-0.0.3.scss
@@ -84,7 +84,7 @@ main {
 }
 
 body, nav, main, div, article, section,
-button, ul, li, a, p {
+header, button, ul, li, a, p, img {
 	box-sizing: border-box;
 }
 
